src/test/deca/context/valid/test_eq_class.deca
// Description:
//    Programme verifiant que la comparaison de deux classes quelconque est possible 
//	  Etape(s) : A, B 
// 	  Lexicalement : OUI
//	  Syntaxiquement : OUI
//	  Contextuellement : OUI
//
// Resultats:
//    aucun resultat
//
// Historique:
//    cree le 21/01/2021

class A  {
	int x = 5 ;
	int getX(){
		return x;
	}
}

{
	A a;	
	boolean bol = a==a;
}