src/test/deca/context/invalid/test_modulo_class.deca
// Description:
//    Programme verifiant que le modulo de deux classes est impossible 
//	  Etape(s) : A, B 
// 	  Lexicalement : OUI
//	  Syntaxiquement : OUI
//	  Contextuellement : NON
//
// Resultats:
//    erreur ligne 23 	Les types sont incompatibles pour une opération arithmétique
//
// Historique:
//    cree le 21/01/2021

class A  {
	int x = 5 ;
	int getX(){
		return x;
	}
}

{
	A a,b;	
	a = b%b;
}